2014-07-09  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/CardiacToolbox/correct_blockface_perspective.m as
	matlab/CardiacToolbox/blockface_correct_perspective.m (0.1.0)

	* matlab/CardiacToolbox/blockface_imread_gray.m (0.1.1)

	- Output image volume is now the same class of the images in the
	files, instead of double.

	* matlab/CardiacToolbox/blockface_equalise_illumination.m (0.3.0)

	- Changes in the method. After estimating block surface
	illumination, crop out too little or large illumination
	values. They correspond to interpolation artifacts on the edges,
	and produce a bad equalisation.

	- After equalisation, rescale intensity range so that it matches
	intensity range of the original image.

	- Convert equalised image from double to the type of the input
	image.

	* Rename matlab/CardiacToolbox/equalise_blockface_illumination.m
	as matlab/CardiacToolbox/blockface_equalise_illumination.m (0.2.0)

	* Add matlab/CardiacToolbox/blockface_imread_gray.m (0.1.0)

	- BLOCKFACE_IMREAD_GRAY Read multiple image files into grayscale
	volume.

	* CardiacToolbox/blockface_create_masks.m (0.1.1)

	- Fix bug. We need a wait() to that user can reposition or modify
	the ellipse and polygon.

	* Add matlab/CardiacToolbox/blockface_create_masks.m (0.1.0)

	- BLOCKFACE_CREATE_MASK User interface to create the elliptical
	and polygonal segmentation masks used to correct blockface
	illumination.

2014-06-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.4.2)

	- Add option sphparam_opts.AllInnerVerticesAreFree. For local
	SMACOF only, this allows to recompute the free vertices in each
	local neighbourhood. When the option is set to true, then in each
	local neighbourhood we find the boundary, and then all the
	vertices inside are considered to be free. This option makes local
	neighbourhoods more "convex", and can help solve difficult
	ones. On the other hand, it increases the number of free vertices,