@@ -73,6 +73,11 @@ estimate_bias_field.m
 
 estimate_block_fgbg.m
 
+histology_blockface_preprocessing.m
+
+	 HISTOLOGY_BLOCKFACE_PREPROCESSING  Prepare histology and blockface for
+	 registration.
+	
 is_lv_on_the_left.m
 
 	 IS_LV_ON_THE_LEFT  Check whether the left ventricle is on the left hand
